[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-ollama"
version = "0.2.1"
description = "An integration package connecting Ollama and LangChain"
authors = []
readme = "README.md"
license = "MIT"
requires-python = ">=3.9,<4.0"
dependencies = [
    "ollama>=0.4.4,<1",
    "langchain-core>=0.3.20"
]

[project.urls]
"Source Code" = "https://github.com/langchain-ai/langchain/tree/master/libs/partners/ollama"
"Release Notes" = "https://github.com/langchain-ai/langchain/releases?q=tag%3A%22langchain-ollama%3D%3D0%22&expanded=true"
Repository = "https://github.com/langchain-ai/langchain"

[tool.mypy]
disallow_untyped_defs = true

[tool.ruff.lint]
select = [
  "E",    # pycodestyle
  "F",    # pyflakes
  "I",    # isort
  "T201", # print
  "D",    # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"] # ignore docstring checks for tests

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
addopts = "--snapshot-warn-unused --strict-markers --strict-config --durations=5"
markers = [
  "compile: mark placeholder test used to compile integration tests without running them",
]
asyncio_mode = "auto"

[tool.uv]
dev-dependencies = [
    "langchain-tests>=0.3.11",
    "pytest>=8.3.4",
    "ruff>=0.9.5",
]

[project.optional-dependencies]
test = [
    "langchain-tests",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.2", 
    "syrupy>=4.0.2",
    "pytest-socket>=0.7.0",
    "pytest-watcher>=0.3.4"
]
codespell = [
    "codespell>=2.2.6"
]
lint = [
    "ruff>=0.1.8"
]
typing = [
    "mypy>=1.7.1"
]

[tool.uv.sources]
langchain-core = { git = "https://github.com/langchain-ai/langchain", subdirectory = "libs/core/" }
langchain-tests = { git = "https://github.com/langchain-ai/langchain", subdirectory = "libs/standard-tests/" }
